syntax = "proto3";

option go_package = "genproto/public/";

package protos;

import "protos/common.proto";

service PartyService {
  rpc Create (Party) returns (Void) {}
  rpc Get (GetPartyReq) returns (PartyRes) {}
  rpc GetAll (Filter) returns (GetAllPartysResponse) {}
  rpc Update (PartyUpdate) returns (Void) {}
  rpc Delete(GetByIdReq) returns (Void) {}
}

message Party {
  string id = 1;
  string name = 2;
  string slogan = 3;
  string opened_date = 4;
  string description = 5;
  string created_at = 6;
  string updated_at = 7;
  string deleted_at = 8;
}

message PartyCreate {
  string first_name = 1;
  string last_name = 2;
  string birthday = 3;
  string gender = 4;
  string nation = 5;
  string party_id = 6;
}

message GetPartyReq {
  string name = 1;
  string opened_date = 2;
}

message PartyRes {
  string id = 1;
  string name = 2;
  string slogan = 3;
  string opened_date = 4;
  string description = 5;
}

message PartyUpdate {
  string name = 2;
  string slogan = 3;
  string opened_date = 4;
  string description = 5;
}

message GetAllPartysResponse {
  repeated PartyRes baskets = 1;
}